# hadr-starter

./: .gitattributes  .gitignore  BREADBOARD.md  CLAUDE.md  CONTEXT.md  FRAME.md  QUESTIONS.md  README.md  REQS.md  SHAPING.md  SLICES.md  SPIKE-1-gdacs-detail-ids.md  dashboard.html  goal.md  implementation-notes.md  index.html  prd.html  pyproject.toml
.github/workflows/: sitrep.yml
data/: state.json
docs/: PRD.md  blindspots.md
docs/adr/: 0001-event-state-reconciler.md  0002-impact-based-reporting-threshold.md  0003-daily-edition-plus-intraday-red.md  0004-state-in-committed-json.md  0005-python-uv-stack.md
hadr/: __init__.py  __main__.py
scripts/: __init__.py  assess.py  edition.py  feeds.py  fetch_gdacs.py  fetch_usgs.py  gate.py  geo.py  reconcile.py  render.py  retry.py  schedule.py  staleness.py  state.py
skills/sitrep/: SKILL.md
tests/: conftest.py  test_assess.py  test_edition.py  test_fetch_gdacs.py  test_fetch_usgs.py  test_flash.py  test_gate.py  test_reconcile.py  test_reconcile_join.py  test_render.py  test_schedule.py  test_staleness.py  test_workflow.py
tests/fixtures/scenario_a/: gdacs_detail_1550709.json  gdacs_events4app.json  usgs_all_day.json  usgs_all_day_revised.json
