[project]
name = "hadr"
version = "0.1.0"
description = "HADR Monitor — hourly disaster-feed reconciler publishing a daily dashboard edition."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Deterministic logic lives in scripts/; orchestration in hadr/ (see implementation-notes.md).
packages = ["hadr", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
